feat: updated brownie user path

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,11 +19,11 @@ services:
       context: ./brownie
     command: tail -f /dev/null
     volumes:
-      - ../contracts:/home/user/contracts
-      - ../interfaces:/home/user/interfaces
-      - ../scripts:/home/user/scripts
-      - ../tests:/home/user/tests
-      - ../build:/home/user/build
-      - ../reports:/home/user/reports
+      - ../contracts:/home/user/artion/contracts
+      - ../interfaces:/home/user/artion/interfaces
+      - ../scripts:/home/user/artion/scripts
+      - ../tests:/home/user/artion/tests
+      - ../build:/home/user/artion/build
+      - ../reports:/home/user/artion/reports
     networks:
       - artion_contracts_network
