feat: change brownie python image to `slim`

--- a/docker/brownie/Dockerfile
+++ b/docker/brownie/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.7-alpine
+FROM python:3.7-slim
 
 ARG PUID=1000
 ENV PUID ${PUID}
@@ -6,16 +6,16 @@ ARG PGID=1000
 ENV PGID ${PGID}
 
 # Update package manager and install required dependencies
-RUN apk update \
-    && apk upgrade \
-    && apk add --no-cache bash gcc musl-dev linux-headers tk
+RUN apt-get update \
+    && apt-get install -y build-essential tk
 
 # Install brownie
-RUN python3 -m pip install --upgrade pip && pip install eth-brownie==1.17.2
+RUN python3 -m pip install --upgrade pip && pip3 install eth-brownie==1.17.2
 
 # Add non-root user
-RUN addgroup -g ${PGID} brownie \
-    && adduser -D -u ${PUID} -s /bin/bash -h /home/user -G brownie user \
+RUN groupadd -g ${PGID} brownie \
+    && useradd -u ${PUID} -g brownie -m user \
+    && usermod -p "*" user -s /bin/bash \
     && chown -R user:brownie /home/user
 
 # Set default user
